--- a/src/app/home/includes/header/header.component.html
+++ b/src/app/home/includes/header/header.component.html
@@ -150,7 +150,11 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a routerLink="/products/settings" class="nav-link"><i class="fa fa-caret-right"></i> Companies & Types
+                <a routerLink="/products/settings" class="nav-link"><i class="fa fa-caret-right"></i> Brands & Types
+                </a>
+              </li>
+              <li class="nav-item">
+                <a routerLink="/supplier" class="nav-link"><i class="fa fa-caret-right"></i> Suppliers
                 </a>
               </li>
             </ul>
