--- a/src/app/home/product/product.component.html
+++ b/src/app/home/product/product.component.html
@@ -3,7 +3,7 @@
     <div class="card-header card-header-top">
       <span class="margin-align-title card-header-title">
         <div class="font-icon-wrapper font-icon-lg">
-          <i class="fa fa-capsules icon-gradient bg-happy-itmeo"> </i> Add Products
+          <i class="fa fa-capsules icon-gradient bg-happy-itmeo"> </i> Save Products
         </div>
       </span>
       <div class="btn-actions-pane-right">
@@ -15,19 +15,19 @@
         <div class="col-lg-12">
             <form id="myForm" class="form-width-100 sale-filter-form-background" (ngSubmit)="AddProduct()">
               <div class="form-row">
-                  <div class="col-md-3">
+                  <div class="col-md-4">
                       <div class="position-relative form-group">
-                        <input name="product_name" id="product_name" [(ngModel)]="productDetails.product_name" placeholder="Name" type="text" class="form-control">
+                        <input name="product_name" id="product_name" [(ngModel)]="productDetails.product_name" placeholder="Title" type="text" class="form-control">
                       </div>
                   </div>
-                  <div class="col-md-3">
+                  <!-- <div class="col-md-3">
                       <div class="position-relative form-group">
                         <select class="ace form-control" required name="company" [(ngModel)]="productDetails.company">
-                          <option value="">Select Company</option>
+                          <option value="">Select Supplier</option>
                           <option *ngFor="let company of allCompanyList" value="{{ company.id }}">{{ company.name }}</option>
                         </select>
                       </div>
-                  </div>
+                  </div> -->
                   <div class="col-md-3">
                       <div class="position-relative form-group">
                         <select class="ace form-control" required name="type" [(ngModel)]="productDetails.type">
@@ -36,12 +36,20 @@
                         </select>
                       </div>
                   </div>
+                  <div class="col-md-2">
+                    <div class="position-relative form-group">
+                      <select class="ace form-control" required name="brand_id" [(ngModel)]="productDetails.brand_id">
+                        <option value="">Select Brand</option>
+                        <option *ngFor="let brand of allBrandList" value="{{ brand.id }}">{{ brand.name }}</option>
+                      </select>
+                    </div>
+                </div>
                   <div class="col-md-3">
                       <div class="position-relative form-group">
-                        <input name="generic" [(ngModel)]="productDetails.generic" placeholder="Generic" type="text" class="form-control">
+                        <input name="generic" [(ngModel)]="productDetails.generic" placeholder="Specification" type="text" class="form-control">
                       </div>
                   </div>
-                  <div class="col-md-3">
+                  <!-- <div class="col-md-3">
                       <div class="position-relative form-group">
                         <input name="power" [(ngModel)]="productDetails.power" placeholder="Power" type="text" class="form-control">
                       </div>
@@ -61,11 +69,11 @@
                             </div>
                         </div>
                       </div>
-                  </div>
+                  </div> -->
                   <div class="col-md-3">
                       <div class="position-relative form-group">
                         <button type="button" (click)="AddProduct()" class="btn btn-info">
-                          Add Product
+                          Save
                         </button> &nbsp;
                         <button type="button" (click)="resetList()" class="btn btn-warning">
                           Reset
@@ -85,12 +93,11 @@
             <thead>
               <tr>
                   <th>#</th>
-                  <th>Name</th>
-                  <th>Type/Form</th>
-                  <th>Generic</th>
-                  <th>Strength</th>
-                  <th>Company</th>
-                  <th>Product Category</th>
+                  <th>Title</th>
+                  <th>Type</th>
+                  <th>Specification</th>
+                  <th>Brand</th>
+                  <th>Action</th>
               </tr>
             </thead>
             <tbody>
@@ -99,15 +106,10 @@
                   <td>{{ item.brand_name }}</td>
                   <td>{{ item.type }}</td>
                   <td>{{ item.generic_name }}</td>
-                  <td>{{ item.strength }}</td>
-                  <td>{{ item.company_name }}</td>
+                  <td>{{ item.brand }}</td>
                   <td>
-                    <div *ngIf="item.product_type==1">
-                        Medicine
-                    </div>
-                    <div *ngIf="item.product_type==2">
-                        Consumer products
-                    </div>
+                    <a style="cursor: pointer" class="btn btn-info fa fa-edit" (click)="editProduct(item.id)"></a> &nbsp;
+                    <a style="cursor: pointer" class="btn btn-danger fa fa-trash" (click)="deleteProduct(item.id)"></a>
                   </td>
               </tr>
             </tbody>
