--- a/src/assets/css/custom.css
+++ b/src/assets/css/custom.css
@@ -178,7 +178,7 @@ table > caption {
   width: 50%;
 }
 
-.supplier-modal .jw-modal .jw-modal-body {
+.view-modal .jw-modal .jw-modal-body {
   padding: 20px;
   background: #fff;
   margin: 40px;
