--- a/src/app/home/includes/header/header.component.html
+++ b/src/app/home/includes/header/header.component.html
@@ -142,11 +142,11 @@
               <i class="fa fa-file-medical-alt icon-gradient bg-success menu-with-icon"> </i> Settings
             </button>
             <ul class="dropdown-menu dropdown-menu-area">
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a routerLink="/products" class="nav-link"><i class="fa fa-caret-right"></i> Product Add </a>
-              </li>
+              </li> -->
               <li class="nav-item">
-                <a routerLink="/settings/products" class="nav-link"><i class="fa fa-caret-right"></i> Product Edit
+                <a routerLink="/settings/products" class="nav-link"><i class="fa fa-caret-right"></i> Products
                 </a>
               </li>
               <li class="nav-item">
